objects/PT_CaseAttachments__c.object
<CustomObject>
    <fields>
        <fullName>Attachment_Type__c</fullName>
        <description>Needs to match an available PT_IntegrationType__c on ContentVersion object</description>
        <label>Attachment Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Attachments</relationshipLabel>
        <relationshipName>Case_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Doc_Id__c</fullName>
        <label>Content Doc Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Attach_Doc_Id__c</fullName>
        <label>Ext Attach Doc Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Doc_Id__c</fullName>
        <label>Ext Doc Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_ExternalId__c</fullName>
        <description>Uniqueness value to ensure that data is loaded accurately. Record load will fail if this is not unique. Should be a composite of the Case ID+Content Doc ID + Order ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Uniqueness value to ensure that data is loaded accurately. Record load will fail if this is not unique. Should be a composite of the Case ID+Content Doc ID + Order ID</inlineHelpText>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Id</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Case Attachments</relationshipLabel>
        <relationshipName>Case_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Integration_Message__c</fullName>
        <label>Integration_Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_IntegrationStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Case Attachment</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Case Attachments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>